# manybody

./: .gitignore  Cargo.toml  README.md  fd-backup.ipynb  graphical.ipynb  result.csv  test.py  test2.ipynb  wrapper.py
lab-dbn/: error-num.py  quicktest.py  rbmc-vs-mh.py
lab-pb/: draw.py  fd.ipynb  fd.out  fd.py
nn/: main-mh.py  main.ipynb  main.py
src/: data.rs  dbparticle.rs  ion.rs  lib.rs  main.rs  manybody.rs  nn.rs  particle.rs  rbmc.rs
tests/: data_test.rs  interaction_db.rs  interaction_ion.rs  kdtree_test.rs  test1.rs
