[package]
name = "manybody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.7.0"
nalgebra = { version = "0.32.1", features = [ "rand" ] }
rand = "0.8.5"
typenum = "1.16.0"
rand_distr = "0.4.3"
array_tool = "1.0.3"
num-traits = "0.2.15"
derive_more = "0.99.17"
