[package]
name = "manybody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.1", features = [ "rand" ] }
rand = "0.8.5"
rand_distr = "0.4.3"
kiddo = "0.2.5"
approx = "0.5.1"
clap = { version = "4.1.6", features = ["derive"] }
ndarray = "0.15.6"
